--- a/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/FromEvent.Generated.tt
+++ b/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/FromEvent.Generated.tt
@@ -77,9 +77,9 @@ for (var i = 2; i <= 16; i++)
                 SynchronizeEvents(
                     Create<<#=tuple#>>(observer =>
                     {
-                        var handler = new Action<<#=genArgs#>>(async (<#=pars#>) =>
+                        var handler = new Action<<#=genArgs#>>((<#=pars#>) =>
                         {
-                            await observer.OnNextAsync((<#=pars#>)).ConfigureAwait(false);
+                            observer.OnNextAsync((<#=pars#>)); // REVIEW: Fire-and-forget can lead to out of order processing, and observers may reject these calls as "busy".
                         });
 
                         var converted = conversion(handler);
