--- a/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
@@ -34,7 +34,6 @@ var os = new[]
 foreach (var o in os)
 {
     var n = o.type.EndsWith("?") ? ".GetValueOrDefault()" : "";
-    var nonNullType = o.type.EndsWith("?") ? o.type.TrimEnd('?') : o.type;
 #>
         public static Task<<#=o.type#>> SumAsync(this IAsyncEnumerable<<#=o.type#>> source)
         {
@@ -106,9 +105,9 @@ foreach (var o in os)
 
         private static async Task<<#=o.type#>> SumCore(IAsyncEnumerable<<#=o.type#>> source, CancellationToken cancellationToken)
         {
-            <#=nonNullType#> sum = <#=o.zero#>;
+            var sum = <#=o.zero#>;
 
-            IAsyncEnumerator<<#=o.type#>> e = source.GetAsyncEnumerator(cancellationToken);
+            var e = source.GetAsyncEnumerator(cancellationToken);
 
             try
             {
@@ -143,15 +142,15 @@ else
 
         private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, <#=o.type#>> selector, CancellationToken cancellationToken)
         {
-            <#=nonNullType#> sum = <#=o.zero#>;
+            var sum = <#=o.zero#>;
 
-            IAsyncEnumerator<TSource> e = source.GetAsyncEnumerator(cancellationToken);
+            var e = source.GetAsyncEnumerator(cancellationToken);
 
             try
             {
                 while (await e.MoveNextAsync().ConfigureAwait(false))
                 {
-                    <#=o.type#> value = selector(e.Current);
+                    var value = selector(e.Current);
 
 <#
 if (o.@checked)
@@ -182,15 +181,15 @@ else
 
         private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
         {
-            <#=nonNullType#> sum = <#=o.zero#>;
+            var sum = <#=o.zero#>;
 
-            IAsyncEnumerator<TSource> e = source.GetAsyncEnumerator(cancellationToken);
+            var e = source.GetAsyncEnumerator(cancellationToken);
 
             try
             {
                 while (await e.MoveNextAsync().ConfigureAwait(false))
                 {
-                    <#=o.type#> value = await selector(e.Current).ConfigureAwait(false);
+                    var value = await selector(e.Current).ConfigureAwait(false);
 
 <#
 if (o.@checked)
@@ -222,15 +221,15 @@ else
 #if !NO_DEEP_CANCELLATION
         private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
         {
-            <#=nonNullType#> sum = <#=o.zero#>;
+            var sum = <#=o.zero#>;
 
-            IAsyncEnumerator<TSource> e = source.GetAsyncEnumerator(cancellationToken);
+            var e = source.GetAsyncEnumerator(cancellationToken);
 
             try
             {
                 while (await e.MoveNextAsync().ConfigureAwait(false))
                 {
-                    <#=o.type#> value = await selector(e.Current, cancellationToken).ConfigureAwait(false);
+                    var value = await selector(e.Current, cancellationToken).ConfigureAwait(false);
 
 <#
 if (o.@checked)
