--- a/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
@@ -40,7 +40,44 @@ foreach (var o in os)
             if (source == null)
                 throw Error.ArgumentNull(nameof(source));
 
-            return SumCore(source, cancellationToken);
+            return Core();
+
+            async Task<<#=o.type#>> Core()
+            {
+                var sum = <#=o.zero#>;
+
+                var e = source.GetAsyncEnumerator(cancellationToken);
+
+                try
+                {
+                    while (await e.MoveNextAsync().ConfigureAwait(false))
+                    {
+<#
+if (o.@checked)
+{
+#>
+                        checked
+                        {
+                            sum += e.Current<#=n#>;
+                        }
+<#
+}
+else
+{
+#>
+                        sum += e.Current<#=n#>;
+<#
+}
+#>
+                    }
+                }
+                finally
+                {
+                    await e.DisposeAsync().ConfigureAwait(false);
+                }
+
+                return sum;
+            }
         }
 
         public static Task<<#=o.type#>> SumAsync<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, <#=o.type#>> selector, CancellationToken cancellationToken = default)
@@ -50,7 +87,46 @@ foreach (var o in os)
             if (selector == null)
                 throw Error.ArgumentNull(nameof(selector));
 
-            return SumCore(source, selector, cancellationToken);
+            return Core();
+
+            async Task<<#=o.type#>> Core()
+            {
+                var sum = <#=o.zero#>;
+
+                var e = source.GetAsyncEnumerator(cancellationToken);
+
+                try
+                {
+                    while (await e.MoveNextAsync().ConfigureAwait(false))
+                    {
+                        var value = selector(e.Current);
+
+<#
+if (o.@checked)
+{
+#>
+                        checked
+                        {
+                            sum += value<#=n#>;
+                        }
+<#
+}
+else
+{
+#>
+                        sum += value<#=n#>;
+<#
+}
+#>
+                    }
+                }
+                finally
+                {
+                    await e.DisposeAsync().ConfigureAwait(false);
+                }
+
+                return sum;
+            }
         }
 
         public static Task<<#=o.type#>> SumAsync<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
@@ -60,7 +136,46 @@ foreach (var o in os)
             if (selector == null)
                 throw Error.ArgumentNull(nameof(selector));
 
-            return SumCore(source, selector, cancellationToken);
+            return Core();
+
+            async Task<<#=o.type#>> Core()
+            {
+                var sum = <#=o.zero#>;
+
+                var e = source.GetAsyncEnumerator(cancellationToken);
+
+                try
+                {
+                    while (await e.MoveNextAsync().ConfigureAwait(false))
+                    {
+                        var value = await selector(e.Current).ConfigureAwait(false);
+
+<#
+if (o.@checked)
+{
+#>
+                        checked
+                        {
+                            sum += value<#=n#>;
+                        }
+<#
+}
+else
+{
+#>
+                        sum += value<#=n#>;
+<#
+}
+#>
+                    }
+                }
+                finally
+                {
+                    await e.DisposeAsync().ConfigureAwait(false);
+                }
+
+                return sum;
+            }
         }
 
 #if !NO_DEEP_CANCELLATION
@@ -71,163 +186,46 @@ foreach (var o in os)
             if (selector == null)
                 throw Error.ArgumentNull(nameof(selector));
 
-            return SumCore(source, selector, cancellationToken);
-        }
-#endif
+            return Core();
 
-        private static async Task<<#=o.type#>> SumCore(IAsyncEnumerable<<#=o.type#>> source, CancellationToken cancellationToken)
-        {
-            var sum = <#=o.zero#>;
-
-            var e = source.GetAsyncEnumerator(cancellationToken);
-
-            try
+            async Task<<#=o.type#>> Core()
             {
-                while (await e.MoveNextAsync().ConfigureAwait(false))
+                var sum = <#=o.zero#>;
+
+                var e = source.GetAsyncEnumerator(cancellationToken);
+
+                try
                 {
+                    while (await e.MoveNextAsync().ConfigureAwait(false))
+                    {
+                        var value = await selector(e.Current, cancellationToken).ConfigureAwait(false);
+
 <#
 if (o.@checked)
 {
 #>
-                    checked
-                    {
-                        sum += e.Current<#=n#>;
-                    }
+                        checked
+                        {
+                            sum += value<#=n#>;
+                        }
 <#
 }
 else
 {
 #>
-                    sum += e.Current<#=n#>;
-<#
-}
-#>
-                }
-            }
-            finally
-            {
-                await e.DisposeAsync().ConfigureAwait(false);
-            }
-
-            return sum;
-        }
-
-        private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, <#=o.type#>> selector, CancellationToken cancellationToken)
-        {
-            var sum = <#=o.zero#>;
-
-            var e = source.GetAsyncEnumerator(cancellationToken);
-
-            try
-            {
-                while (await e.MoveNextAsync().ConfigureAwait(false))
-                {
-                    var value = selector(e.Current);
-
-<#
-if (o.@checked)
-{
-#>
-                    checked
-                    {
                         sum += value<#=n#>;
+<#
+}
+#>
                     }
-<#
-}
-else
-{
-#>
-                    sum += value<#=n#>;
-<#
-}
-#>
                 }
-            }
-            finally
-            {
-                await e.DisposeAsync().ConfigureAwait(false);
-            }
-
-            return sum;
-        }
-
-        private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
-        {
-            var sum = <#=o.zero#>;
-
-            var e = source.GetAsyncEnumerator(cancellationToken);
-
-            try
-            {
-                while (await e.MoveNextAsync().ConfigureAwait(false))
+                finally
                 {
-                    var value = await selector(e.Current).ConfigureAwait(false);
-
-<#
-if (o.@checked)
-{
-#>
-                    checked
-                    {
-                        sum += value<#=n#>;
-                    }
-<#
-}
-else
-{
-#>
-                    sum += value<#=n#>;
-<#
-}
-#>
+                    await e.DisposeAsync().ConfigureAwait(false);
                 }
+
+                return sum;
             }
-            finally
-            {
-                await e.DisposeAsync().ConfigureAwait(false);
-            }
-
-            return sum;
-        }
-
-#if !NO_DEEP_CANCELLATION
-        private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
-        {
-            var sum = <#=o.zero#>;
-
-            var e = source.GetAsyncEnumerator(cancellationToken);
-
-            try
-            {
-                while (await e.MoveNextAsync().ConfigureAwait(false))
-                {
-                    var value = await selector(e.Current, cancellationToken).ConfigureAwait(false);
-
-<#
-if (o.@checked)
-{
-#>
-                    checked
-                    {
-                        sum += value<#=n#>;
-                    }
-<#
-}
-else
-{
-#>
-                    sum += value<#=n#>;
-<#
-}
-#>
-                }
-            }
-            finally
-            {
-                await e.DisposeAsync().ConfigureAwait(false);
-            }
-
-            return sum;
         }
 #endif
 
